<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bitifyware</groupId>
    <artifactId>code-area</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <proguard.version>7.6.1</proguard.version>
        <proguard.maven.plugin.version>2.6.1</proguard.maven.plugin.version>
        <javafx.version>23.0.1</javafx.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.openjfx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.raumzeitfalle.fx/scenic-view -->
        <dependency>
            <groupId>net.raumzeitfalle.fx</groupId>
            <artifactId>scenic-view</artifactId>
            <version>11.0.2</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-fxml</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-web</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-media</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-swing</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


    </dependencies>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.wvengen</groupId>
                        <artifactId>proguard-maven-plugin</artifactId>
                        <version>${proguard.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>proguard</goal>
                                </goals>
                            </execution>
                        </executions>

                        <configuration>
                            <proguardVersion>${proguard.version}</proguardVersion>
                            <injar>${project.build.finalName}.jar</injar>
                            <outjar>${project.build.finalName}.jar</outjar>
                            <obfuscate>true</obfuscate>
                            <options>
                                <!--                                <option>-dontshrink</option>-->
                                <!--                                <option>-dontoptimize</option>-->

                                <!-- 此选项将用新的类名替换反射方法调用中的所有字符串。例如，调用Class.forName('className') -->
                                <!--                                <option>-adaptclassstrings</option>-->

                                <!-- 此选项将保存所有原始注解等。否则，将从文件中删除所有注解。 -->
                                <!--                                <option>-keepattributes-->
                                <!--                                    Exceptions,-->
                                <!--                                    InnerClasses,-->
                                <!--                                    Signature,-->
                                <!--                                    Deprecated,-->
                                <!--                                    SourceFile,-->
                                <!--                                    LineNumberTable,-->
                                <!--                                    *Annotation*,-->
                                <!--                                    EnclosingMethod-->
                                <!--                                </option>-->

                                <!-- 此选项将保存接口中的所有原始名称（不混淆） -->
                                <!--                                <option>-keepnames interface **</option>-->

                                <!-- 此选项将将所有原始方法参数 -->
                                <!--                                <option>-keepparameternames</option>-->

                                <!-- 此选项将保存所有原始类文件（不混淆），一般是混淆领域或者服务包中的文件。 -->
<!--                                <option>-keep-->
<!--                                    class com.bitifyware.sqlife.DesktopApp {-->
<!--                                    public static void main(java.lang.String[]);-->
<!--                                    }-->
<!--                                </option>-->

                                <!-- 此选项忽略警告，例如重复的类定义和命名不正确的文件中的类 -->
                                <option>-ignorewarnings</option>
                                <option>-keeppackagenames</option>
                                <option>-keepattributes Signature</option>

                                <!-- 此选项将保存服务包中的所有原始类文件（不进行混淆） -->
                                <!--                                <option>-keep class javafx.** { *; }</option>-->
                                <option>-keep class module-info { *; }</option>
                                <option>-keep class javafx.** { *; }</option>
                                <option>-keep class com.bitifyware.control.utils.* { *; }</option>
                                <option>-keep class com.bitifyware.control.skin.* { *; }</option>
                                <option>-keep class com.bitifyware.control.syntax.* { *; }</option>
                                <option>-keep class com.bitifyware.control.* { *; }</option>
                                <!-- 此选项将保存所有软件包中的所有原始接口文件（不进行混淆） -->
                                <option>-keep interface * extends * { *; }</option>

                                <!-- 此选项将保存所有包中所有类中的所有原始定义的注解 -->
                                <option>-keep class com.fasterxml.jackson.** { *; }</option>
                                <option>-keep class org.json.JSONObject.** {**
                                    put(java.lang.String,java.util.Map);}</option>

                                <option>-dontwarn com.fasterxml.jackson.databind.**</option>
                                <option>-dontwarn com.fasterxml.jackson.**</option>

                            </options>
                            <injarNotExistsSkip>true</injarNotExistsSkip>
                            <libs>
                                <!--在此添加需要的类库 -->
                                <lib>${java.home}/jmods</lib>
                            </libs>

                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.guardsquare</groupId>
                                <artifactId>proguard-base</artifactId>
                                <version>${proguard.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.collections=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.binding=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.input=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.tk=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.text=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.util=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.application=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.inputmap=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.skin.resources=com.bitifyware.codearea</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.skin=com.bitifyware.codearea</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>